--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    <button id="create">Create</button>
+    <!--<button id="create">Create</button>-->
     <div id="main-container"></div>
 </body>
 </html>
